[gd_scene load_steps=4 format=3 uid="uid://crg887yi5f3rr"]

[ext_resource type="Script" path="res://Scenes/menuTutorial.gd" id="1_a0af3"]
[ext_resource type="Texture2D" uid="uid://bq8arwc8uwrp1" path="res://imgs/1f5d7f566145ab4361f31a36ba80bb3.jpg" id="2_r4oa5"]
[ext_resource type="FontFile" uid="uid://bk7y7cg03wr1n" path="res://console folder/fonts/SpaceMono-Regular.ttf" id="3_geo"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1059.0
offset_top = -380.0
offset_right = -1177.0
offset_bottom = -458.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a0af3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 755.0
offset_top = 320.0
offset_right = 825.0
offset_bottom = 421.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_r4oa5")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TextureRect"]
layout_mode = 2
offset_left = 1000.0
offset_top = 464.0
offset_right = 1610.0
offset_bottom = 1004.0

[node name="Easy" type="Button" parent="MarginContainer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_geo")
theme_override_font_sizes/font_size = 90
text = "EASY
"

[node name="Medium" type="Button" parent="MarginContainer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0.843137)
theme_override_fonts/font = ExtResource("3_geo")
theme_override_font_sizes/font_size = 90
text = "MEDIUM
"

[node name="Hard" type="Button" parent="MarginContainer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_geo")
theme_override_font_sizes/font_size = 90
text = "HARD"

[node name="Pro" type="Button" parent="MarginContainer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_geo")
theme_override_font_sizes/font_size = 90
text = "PRO"

[connection signal="pressed" from="MarginContainer/TextureRect/VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/VBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/VBoxContainer/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/VBoxContainer/Pro" to="." method="_on_pro_pressed"]
